--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         function redirectToAppOrWebpage() {
             if (isMobile()) {
                 // Redirect to the app's URL
-                window.location.href = "zwapwallet://";
+                window.location.href = "zwapwallet://upgradePage";
             } else {
                 // Redirect to a webpage if not on a mobile device
                 window.location.href = "https://www.zwap.hk/zwapwallet/";
