--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.zwap.hk/zwapwallet/">click here</a>.</p>
+    <p>If you are not redirected then, <a href="https://www.zwap.hk/zwapwallet/">click here</a>.</p>
 </body>
 </html>
